package appli.controleur;

/**
 * Interface Observateur
 * Interface pour les observateurs
 */
public interface Observateur {
    /**
     * Méthode pour réagir à un changement
     */
    void reagir();
}
