@startuml

class carnet.Page{
    + LocalDate date;
    + String Titre;
    + String texte;
    + String photoPath;
    - getTitre()
    - setTitre(String)
    - getTexte()
    - setTexte(String)
    - getDate()
    - setDate(LocalDate)
    - setPhotoPath(String)
    - getPhotoPath()
}

class carnet.Carnet{
    + LocalDate debut;
    + int nbPages;
    + String filePath;
    + List<String> participants;
    - setData(LocalDate, int)
    - ajouterPages(int)
    - getPages(int)
    - getNewPage()
    - getNbPages()
    - getDateDeb()
    - getPath()
    - getParticipants()
    - ajouterParticipant(String)
    - updateFromFile(File)
    - saveToFile(String)

}
class carnet.SujetObserve{
    - ArrayList<Observateur> observateurs
    + void ajouterObservateur(Observateur)
    + void notifierObservateur()
}


carnet.Page -- "*"carnet.Carnet

carnet.SujetObserve <|-- carnet.Carnet



controleur.Observateur "*" -- carnet.SujetObserve
controleur.ControleurPage ..|> controleur.Observateur
controleur.ControleurFirstPage ..|> controleur.Observateur
controleur.ControleurMenu ..|> controleur.Observateur
controleur.ControleurMenuPage ..|> controleur.Observateur
controleur.ControleurVisuPage ..|> controleur.Observateur


class controleur.ControleurFirstPage{
    + Carnet carnet;
    - sortir()
    - toMenu()
    - saveCarnet()
    - reagir()
}

class controleur.ControleurMenu{
    + Carnet carnet;
    + Label date;
    + Label jours;
    + TextField participantField;
    + ListView<String> participantsList;
    - initialize()
    - getCarnet()
    - sortir()
    - toFirstPage()
    - toMenu()
    - toVisuPage()
    - saveCarnet()
    - ajouterParticipant()
    - reagir()
}

class controleur.ControleurMenuPage{
    + Carnet carnet;
    + DatePicker date;
    + TextField jours;
    - initialize()
    - updateCarnet()
    - sortir()
    - toMenu()
    - toFirstPage()
    - suivant()
    - precedent()
    - saveCarnet()
    - chargerCarnet()
    - updateData()
    - reagir()
}

class controleur.ControleurVisuPage{
    + Carnet carnet;
    + int index;
    + Label titre;
    + Label texte;
    + Label date;
    + ImageView photo;
    - initialize()
    - updateData()
    - updateImage()
    - sortir()
    - toMenu()
    - toFirstPage()
    - suivant()
    - precedent()
    - reagir()
}


class controleur.ControleurPage{
    + Carnet carnet;
    + Page page;
    + int index;
    + TextField titre
    + TextField texte
    + Label date
    + ImageView photo
    - initialize()
    - updateData()
    - updateImage()
    - sortir()
    - toMenu()
    - toFirstPage()
    - suivant()
    - precedent()
    - save()
    - choisirImage()
    - saveCarnet()
    - reagir()
}

interface controleur.Observateur{
    + void reagir()
}

class outils.LocalDateAdapter{
    - serialize(LocalDate, Type, JsonSerializationContext)
    - deserialize(JsonElement, Type, JsonDeserializationContext)
}

class outils.TailleComposant{
    - windHeight()
    - windWidth()
}


@enduml